@@ -1,5 +1,8 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2012-05-09 mmichaud <michael.michaud@free.fr>
+  * Improved PostGIS 2.0 compatibility with ST_ prefixed functions
+
 2012-05-08 mmichaud <michael.michaud@free.fr>
   * WMS : cache the label associated to each MapLayer in MapLayerPanel as it is
     called very often and includes a costly calculation (getFullSRSList)
